--- a/instatour/css/howto.css
+++ b/instatour/css/howto.css
@@ -60,7 +60,7 @@
   }
   
   .howto-item{
-    flex-direction: column !important;
+    flex-direction: row !important;
     margin-left: 0 !important;
   }
   
@@ -74,7 +74,7 @@
   }
   
   .howto-img{
-    padding: 0;
+    padding: 10px;
   }
   
   .howto-desc{
