--- a/instatour/css/wyw.css
+++ b/instatour/css/wyw.css
@@ -33,14 +33,16 @@
 
 @media screen and (max-width: 450px){
   .wyw-item{
-    flex-direction: column;
+    flex-direction: row;
   }
   
   .wyw-item-img{
-    padding: 10px 0;
+    padding: 10px;
+    text-align: center;
   }
   
   .wyw-item-desc{
-    text-align: center;
+    flex: 3;
+    font-size: 14px;
   }
 }
